# ChangeLog for dev-ruby/activerecord
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/activerecord/ChangeLog,v 1.177 2011/12/31 20:58:55 grobian Exp $

  31 Dec 2011; Fabian Groffen <grobian@gentoo.org> activerecord-3.1.3.ebuild:
  Add Prefix keywords, bug #396547

*activerecord-3.1.3 (30 Dec 2011)

  30 Dec 2011; Hans de Graaff <graaff@gentoo.org> +activerecord-3.1.3.ebuild:
  Version bump. Add ruby19. Drop arches due to bug 396547.

  27 Dec 2011; Hans de Graaff <graaff@gentoo.org> activerecord-2.3.14.ebuild:
  Also require rdoc for tests. Fixes bug 379551.

*activerecord-3.0.11 (19 Nov 2011)

  19 Nov 2011; Hans de Graaff <graaff@gentoo.org> +activerecord-3.0.11.ebuild:
  Version bump for Rails 3.0.11.

  05 Oct 2011; Hans de Graaff <graaff@gentoo.org> -activerecord-3.0.7.ebuild,
  -activerecord-3.0.9.ebuild:
  Remove old versions.

  28 Sep 2011; Hans de Graaff <graaff@gentoo.org> -activerecord-2.3.5.ebuild,
  -activerecord-2.3.11.ebuild, -activerecord-2.3.12.ebuild:
  Remove old versions.

*activerecord-3.0.10 (28 Sep 2011)

  28 Sep 2011; Hans de Graaff <graaff@gentoo.org> +activerecord-3.0.10.ebuild:
  Version bump for Rails 3.0.10

  09 Sep 2011; Fabian Groffen <grobian@gentoo.org>
  activerecord-3.0.9.ebuild:
  Marked ~sparc-solaris

  27 Aug 2011; Raúl Porcel <armin76@gentoo.org> activerecord-2.3.14.ebuild:
  ia64/sparc stable wrt #379511

  24 Aug 2011; Markus Meier <maekke@gentoo.org> activerecord-2.3.14.ebuild:
  x86 stable, bug #379511

  18 Aug 2011; Kacper Kowalik <xarthisius@gentoo.org>
  activerecord-2.3.14.ebuild:
  ppc64/ppc stable wrt #379511

  18 Aug 2011; Tony Vroon <chainsaw@gentoo.org> activerecord-2.3.14.ebuild:
  Marked stable as a dependency of dev-ruby/rails based on arch testing by
  Agostino "ago" Sarubbo in security bug #379511 filed by Hans de Graaff.

*activerecord-2.3.14 (17 Aug 2011)

  17 Aug 2011; Hans de Graaff <graaff@gentoo.org> +activerecord-2.3.14.ebuild: