@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/activerecord
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/activerecord/ChangeLog,v 1.177 2011/12/31 20:58:55 grobian Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/activerecord/ChangeLog,v 1.178 2012/03/11 14:09:53 ranger Exp $
+
+  11 Mar 2012; Brent Baude <ranger@gentoo.org> activerecord-3.1.3.ebuild:
+  Marking activerecord-3.1.3 ~ppc64 for bug 396547
 
   31 Dec 2011; Fabian Groffen <grobian@gentoo.org> activerecord-3.1.3.ebuild:
   Add Prefix keywords, bug #396547
